--- a/vignettes/Probit.Rmd
+++ b/vignettes/Probit.Rmd
@@ -17,8 +17,8 @@ library(Probit);
 
 ## Contents
 
-* [Probit Model](#probit-model)
-* [Robit Model](#robit-model)
+* [Probit](#probit)
+* [Robit](#robit)
 
 # Probit
 
