--- a/vignettes/BinReg.Rmd
+++ b/vignettes/BinReg.Rmd
@@ -57,7 +57,7 @@ show(M);
 
 ## Inference
 
-Wald tests for individual coefficients are stored in `M@Coefficients` and displayed using the `show` method. The function `Score.BinReg` performs score tests on subsets of the regression coefficients. The test is specified using a logical vector `L` with as many elements as columns in the model matrix `X`. An element of `L` is set to `TRUE` if the regression coefficient for that column of `X` is fixed under $H_{0}$. An element of `L` is set to `FALSE` if the regression coefficient for that column requires estimation under $H_{0}$. At least one element of `L` must be `TRUE` (i.e. a test must be specified) and at least on element of `L` must be `FALSE` (i.e. a null model must be estimable).
+Wald tests for individual coefficients are stored in `M@Coefficients` and displayed using the `show` method. The function `Score.BinReg` performs score tests on subsets of the regression coefficients. The test is specified using a logical vector `L` with as many elements as columns in the model matrix `X`. An element of `L` is set to `TRUE` if the regression coefficient for that column of `X` is fixed under $H_{0}$. An element of `L` is set to `FALSE` if the regression coefficient for that column requires estimation under $H_{0}$. At least one element of `L` must be `TRUE` (i.e. a test must be specified) and at least one element of `L` must be `FALSE` (i.e. a null model must be estimable).
 
 Below, various hypothses are tested on the example data. The first is an overall test that the coefficients for all covariates, other than the intercept, are zero. The null hypothesis is $H_{0}:\beta_{1}=\beta_{2}=\beta_{3}=\beta_{4}=0$, which is false. The second is an individual test that the coefficient for the fourth covariate is zero. The null hypothesis is $H_{0}:\beta_{4}=0$, which is true. The third is a joint test that the coefficient for the second covariate is zero, and the coefficient for the fourth covariate is two. The null hypothesis is $H_{0}:\beta_{2}=0,\beta_{4}=2$, which if false. The fourth is a joint test that the coefficients for the first and third covariates are equal to negative one. The null hypothesis is $H_{0}:\beta_{1}=\beta_{3}=-1$, which is true. All models include an intercept $\beta_{0}$, since in each case `L[1]=FALSE`. 
 
@@ -131,7 +131,7 @@ $$
 
 ## Estimation
 
-The function `Rit.BinReg` with `model="robit"` specifies a robit model. 
+The function `Fit.BinReg` with `model="robit"` specifies a robit model. Note that the degrees of freedom requires specification. The robit model with `df=7` is similar to the logistic model. 
 
 ```{r}
 # Degrees of freedom
@@ -145,7 +145,7 @@ show(M);
 
 ## Inference
 
-The same hypotheses considered previously are tested for the robit model. 
+The same hypotheses considered previously are tested for the robit model. Note that the degrees of freedom requires specification.
 
 ```{r}
 cat("Test of b1=b2=b3=b4=0:\n");
